--- a/style.css
+++ b/style.css
@@ -1,4 +1,5 @@
 @import url("https://fonts.googleapis.com/css2?family=Train+One&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=Lobster&family=Zilla+Slab:ital,wght@1,500&display=swap");
 
 * {
   margin: 0;
@@ -131,13 +132,14 @@ body {
   border-radius: 50%;
   background: #d1dae3;
   color: #d1dae3;
+  cursor: pointer;
 }
 
 .toggle:before {
   position: absolute;
   left: 27px;
   content: "Light Mode";
-  font-family: "Roboto";
+  font-family: "Zilla Slab";
   font-weight: 700;
   white-space: nowrap;
 }
@@ -149,7 +151,7 @@ body {
 
 .light .toggle:before {
   content: "Dark Mode";
-  font-family: "Roboto";
+  font-family: "Zilla Slab";
   font-weight: 700;
   white-space: nowrap;
 }
@@ -159,7 +161,7 @@ body {
   top: 30px;
   left: 50px;
   cursor: pointer;
-  font-family: "Train One";
+  font-family: "Lobster";
 }
 
 @keyframes glow_name {
@@ -188,3 +190,86 @@ body {
 .myname {
   animation: glow_name 2500ms infinite;
 }
+
+.box div {
+  position: absolute;
+  width: 40px;
+  height: 40px;
+  background-color: transparent;
+  border: 5px ridge;
+}
+
+.box div:nth-child(1) {
+  top: 15%;
+  left: 42%;
+  border-color: #2d00f7;
+  animation: animate_b 10s linear infinite;
+}
+
+.box div:nth-child(2) {
+  top: 70%;
+  left: 52%;
+  border-color: #6a00f4;
+  animation: animate_b 7s linear infinite;
+}
+.box div:nth-child(3) {
+  top: 20%;
+  left: 8%;
+  border-color: #8900f2;
+  animation: animate_b 9s linear infinite;
+}
+.box div:nth-child(4) {
+  top: 35%;
+  left: 65%;
+  border-color: #a100f2;
+  animation: animate_b 10s linear infinite;
+}
+.box div:nth-child(5) {
+  top: 67%;
+  left: 10%;
+  border-color: #f5cb5c;
+  animation: animate_b 12s linear infinite;
+}
+
+.box div:nth-child(6) {
+  top: 60%;
+  left: 80%;
+  border-color: #bc00dd;
+  animation: animate_b 15s linear infinite;
+}
+.box div:nth-child(7) {
+  top: 32%;
+  left: 25%;
+  border-color: #ff686b;
+  animation: animate_b 16s linear infinite;
+}
+.box div:nth-child(8) {
+  top: 90%;
+  left: 25%;
+  border-color: #db00b6;
+  animation: animate_b 12s linear infinite;
+}
+.box div:nth-child(8) {
+  top: 80%;
+  left: 25%;
+  border-color: #00bbf9;
+  animation: animate_b 12s linear infinite;
+}
+.box div:nth-child(9) {
+  top: 25%;
+  left: 88%;
+  border-color: #00f5d4;
+  animation: animate_b 7s linear infinite;
+}
+
+/* @keyframes animate_b {
+  0% {
+    transform: scale(0) translateY(0) rotate(0);
+    opacity: 1;
+  }
+
+  100% {
+    transform: scale(1.5) translateY(-90px) rotate(360deg);
+    opacity: 0;
+  }
+} */
