--- a/style.css
+++ b/style.css
@@ -1,7 +1,4 @@
-@import url("https://fonts.googleapis.com/css2?family=Train+One&display=swap");
-@import url("https://fonts.googleapis.com/css2?family=Lobster&family=Zilla+Slab:ital,wght@1,500&display=swap");
-@import url("https://fonts.googleapis.com/css2?family=Poppins:wght@500&display=swap");
-
+@import url('https://fonts.googleapis.com/css2?family=Great+Vibes&family=Kalam&display=swap');
 * {
   margin: 0;
   padding: 0;
@@ -36,7 +33,7 @@ body {
 }
 
 .light .clock {
-  background: #d1dae3 url(clock.png);
+  /* background: #d1dae3 url(clock.png); */
   background-size: cover;
   border: 4px solid #cad3dc;
   box-shadow: -8px -8px 15px rgba(255, 255, 255, 0.5),
@@ -162,7 +159,8 @@ body {
   top: 30px;
   left: 50px;
   cursor: pointer;
-  font-family: "Lobster";
+  font-family: "Kalam";
+  font-weight: bold;
 }
 
 @keyframes glow_name {
@@ -194,11 +192,15 @@ body {
 
 .hk {
   position: absolute;
-  top: 86%;
+  /* top: 68%; */
   align-items: center;
-  font-family: "Poppins";
-  color: #ff105e;
-  text-shadow: 0 0 50px #00f5d4;
+  font-family: "Great Vibes";
+  /* color: #ff105e; */
+  font-size: 108px;
+  z-index: -108;
+  opacity: 0.15;
+  animation: glow_name 2500ms infinite;
+  /* text-shadow: 0 0 50px #00f5d4; */
 }
 .box div {
   position: absolute;
